# macagents_mock_test_1

./: .gitignore  README.md  SOLUTION.md  pyproject.toml  solution.ipynb
results/: baseline_metrics.json  baseline_predictions.json  baseline_train_history.json  comparison_table.md  enhanced_metrics.json  enhanced_predictions.json  enhanced_train_history.json
scripts/: compare_results.py  download_data.py  run_experiment.py
src/: __init__.py  data.py  evaluate.py  modeling.py  train.py
